# scopehal-fx3-bridge

./: .gitignore  Cargo.toml  Makefile  ezusb.c  ezusb.h  fxload  fxload.c  scopehal-fx-bridge.c  test.vcd
fw/: fx3lafw.img
src/: fx3_programmer.rs  fx3lafw.rs  lib.rs  main.rs
