[package]
name = "scopehal-fx-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = "4.5.37"
ctrlc = "3.4.6"
env_logger = "0.11.8"
fst-writer = "0.2.6"
futures-lite = "2.6.0"
log = "0.4.27"
nusb = "0.1.13"
status-line = "0.2.0"
thiserror = "2.0.12"
thread-priority = "1.2.0"
